--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,8 @@
 name: Check node version
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   check-version-of-node:
     runs-on: ubuntu-latest
