--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,7 @@ name: Check node version
 on:
   push:
     branches:
-      - main
+      - master 
 jobs:
   check-version-of-node:
     runs-on: ubuntu-latest
