--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Download dist folder
         uses: actions/download-artifact@v2
         with:
-          name: dist 
+          name: dist-without-markdown 
