--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,31 +1,34 @@
-name: Build project
-on:
-  push:
-    branches:
-      - master 
-jobs:
-  check-version-of-node:
+name: CI to Docker Hub
+on: 
+  push: 
+    branches: [ master ]
+jobs: 
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository 
+      - name: Check Out Repo
         uses: actions/checkout@v2
-      - name: use node
-        uses: actions/setup-node@v2.5.0
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          node-version: '14'
-      - name: npm install and generate
-        run: |
-          npm install
-          npm run build
-          npm run generate 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      
+      - name: Set up Docker Build
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          name: dist-without-markdown
-          path: |
-            dist
-            !dist/**/*.md 
-      - name: Download dist folder
-        uses: actions/download-artifact@v2
-        with:
-          name: dist-without-markdown 
+          context: ./
+          file: ./DockerFile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/smp_docker:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+
+
