--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,10 +13,7 @@ jobs:
           host: ${{ secrets.SEVER_HOST }}
           username: ${{ secrets.SEVER_USERNAME }}
           password: ${{ secrets.SEVER_TOKEN }}
-
           script: |
-            mkdir test
-            cd test
-            git clone git@github.com:Khemy543/SMP.git
+            echo "Login succesfull"
 
 
